--- a/src/main/reactfront/src/App.css
+++ b/src/main/reactfront/src/App.css
@@ -36,3 +36,64 @@
     transform: rotate(360deg);
   }
 }
+
+.app-container {
+  display: flex; /* 플렉스 박스 레이아웃 사용 */
+  height: 100vh; /* 전체 높이를 100%로 설정 */
+}
+
+.festival-list {
+  flex: 8; /* 8 비율 */
+  padding: 20px; /* 패딩 추가 */
+  overflow-y: auto; /* 내용이 넘칠 경우 스크롤 가능 */
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  right: 0; /* 오른쪽에 고정 */
+  width: 300px; /* 팝업 너비 설정 */
+  height: 100%; /* 팝업 높이를 100%로 설정 */
+  background-color: rgba(255, 255, 255, 0.9); /* 배경색 설정 */
+  box-shadow: -2px 0 10px rgba(0, 0, 0, 0.5); /* 그림자 추가 */
+  padding: 20px; /* 패딩 추가 */
+  z-index: 1000; /* 다른 요소 위에 표시 */
+}
+
+.popup-content {
+  position: relative;
+}
+
+.festival-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px;
+  max-width: 1200px; /* 전체 넓이를 1000px로 설정 */
+  margin: 0 auto; /* 중앙 정렬 */
+}
+
+.festival-item {
+  cursor: pointer;
+  text-align: center;
+}
+
+.festival-image {
+  width: 100%;
+  height: 200px; /* 고정된 높이 설정 */
+  object-fit: cover; /* 이미지 비율 유지 */
+}
+
+.popup-image {
+  width: 60%; /* 팝업 이미지 크기 60%로 설정 */
+  height: auto; /* 비율 유지 */
+  margin: 0 auto; /* 좌우 여백을 자동으로 설정하여 중앙 정렬 */
+  display: block; /* 블록 요소로 설정하여 margin이 적용되도록 함 */
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 24px;
+}
